[FIX] sap.m.SearchField - placeholder is not completely visible
- the first character of the placeholder text may be cut off
  and not completely visible

BCP: 1670317106

--- a/src/sap.m/src/sap/m/themes/sap_hcb/SearchField.less
+++ b/src/sap.m/src/sap/m/themes/sap_hcb/SearchField.less
@@ -29,7 +29,7 @@
 	vertical-align: top;
 	width: 100%;
 	position: relative;
-	padding-left: 0.75rem;
+	padding-left: 0.625rem;
 	padding-right: 4.75rem;
 }
 
@@ -92,6 +92,7 @@ html[data-sap-ui-browser^="ie"] .sapMFocus > .sapMSFF {
 	outline: none;
 	padding: 0;
 	margin: 0;
+	text-indent: 0.125rem;
 	vertical-align: top;
 	text-overflow: ellipsis;
 }
@@ -258,7 +259,7 @@ html.sap-desktop .sapMSFB:hover,
 	.sapMSFF{
 		height: 1.625rem;
 		line-height: 1.5rem;
-		padding-left: 0.5rem;
+		padding-left: 0.375rem;
 		padding-right: 4rem;
 	}
 
