--- a/src/themelib_sap_bluecrystal/src/sap/m/themes/sap_bluecrystal/SearchField.less
+++ b/src/themelib_sap_bluecrystal/src/sap/m/themes/sap_bluecrystal/SearchField.less
@@ -31,7 +31,7 @@
 	width: 100%;
 	position: relative;
 
-	padding-left: 0.75rem;
+	padding-left: 0.625rem;
 	padding-right: 4.75rem;
 }
 
@@ -73,6 +73,7 @@
 	outline: none;
 	padding: 0;
 	margin: 0;
+	text-indent: 0.125rem;
 	vertical-align: top;
 	text-overflow: ellipsis;
 }
@@ -224,7 +225,7 @@
 	.sapMSFF{
 		height: 1.625rem;
 		line-height: 1.5rem;
-		padding-left: 0.5rem;
+		padding-left: 0.375rem;
 		padding-right: 4rem;
 	}
 
